  * Added support for reading the TOUCH_MONITOR_PREFIX channel variable.
     It allows you to configure a prefix for auto-monitor recordings.
  * A new extension pattern matching algorithm, based on a trie, is introduced
     here, that could noticeably speed up mid-sized to large dialplans.
     It is NOT used by default, as duplicating the behaviour of the old pattern
     matcher is still under development. A config file option, in extensions.conf,
     in the [general] section, called "extenpatternmatchingnew", is by default
     set to false; setting that to true will force the use of the new algorithm.
     Also, the cli commands "dialplan set extenpatternmatchingnew true/false" can
     be used to switch the algorithms at run time.
  * A new option when starting a remote asterisk (rasterisk, asterisk -r) for
     specifying which socket to use to connect to the running Asterisk daemon
     (-s)
  * Added Doubly-linked lists after the fashion of linkedlists.h. They are in
    dlinkedlists.h. Doubly-linked lists feature fast deletion times.
    Added regression tests to the tests/ dir, also.
  * Added a refcount trace feature to astobj2 for those trying to balance
    object creation, deletion; work, play; space and time. See the
    notes in astobj2.h. Also, see utils/refcounter as well, as a
    quick way to find unbalanced refcounts in what could be a sea
    of objects that were balanced.
  * Added logging to 'make update' command.  See update.log
  * Added strictrtp option to rtp.conf. If enabled this will drop RTP packets that
     do not come from the remote party.
  * Added the 'n' option to the SpeechBackground application to tell it to not
     answer the channel if it has not already been answered.
  * Added a compiler flag, CHANNEL_TRACE, which permits channel tracing to be
     turned on, via the CHANNEL(trace) dialplan function.  Could be useful for
     dialplan debugging.
  * iLBC source code no longer included (see UPGRADE.txt for details)